--- a/Food_del/frontend/src/components/Navbar/Navbar.css
+++ b/Food_del/frontend/src/components/Navbar/Navbar.css
@@ -35,3 +35,20 @@
     background-color: #ffe0da;
 
 }
+.navbar .active{
+    padding-bottom: 2px;
+    border-bottom: 2px solid #49557e;
+    
+}
+.navbar-search_icon{
+    position: relative;
+}
+.navbar-search_icon .dot{
+    position:absolute;
+    min-width: 10px;
+    min-height: 10px;
+    background-color: tomato;
+    border-radius: 5px;
+    top: -8px;
+    right: -8px;
+}
